--- a/web/site/css/style.css
+++ b/web/site/css/style.css
@@ -67,7 +67,7 @@
 .header .container .control .control_logout,
 .header .container .control_logout .control_logout,
 .header .container .control_login .control_logout {
-  display: none;
+  display: block;
 }
 
 .header .container .control .control_login .avatar,
