--- a/web/site/css/style.css
+++ b/web/site/css/style.css
@@ -708,7 +708,7 @@
   max-width: 1070px;
 }
 
-.content .content-body .match {
+.content .content-body .matchs {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -724,7 +724,7 @@
           align-items: center;
 }
 
-.content .content-body .match .match-title {
+.content .content-body .matchs .match-title {
   color: #272C31;
   font-weight: 600;
   font-size: 30px;
@@ -737,7 +737,7 @@
   text-transform: uppercase;
 }
 
-.content .content-body .match .match-tournament {
+.content .content-body .matchs .match-tournament {
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -753,7 +753,7 @@
   position: relative;
 }
 
-.content .content-body .match .match-tournament img {
+.content .content-body .matchs .match-tournament img {
   width: 100%;
   max-width: 178px;
   height: 100px;
@@ -762,7 +762,7 @@
   border-radius: 10px 0 0 10px;
 }
 
-.content .content-body .match .match-tournament .table {
+.content .content-body .matchs .match-tournament .table {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -779,7 +779,7 @@
   width: 17%;
 }
 
-.content .content-body .match .match-tournament .table .table-title {
+.content .content-body .matchs .match-tournament .table .table-title {
   color: #272c31;
   font-weight: 600;
   font-size: 20px;
@@ -789,20 +789,20 @@
   margin: 0 20px 10px 20px;
 }
 
-.content .content-body .match .match-tournament .table .table-text {
+.content .content-body .matchs .match-tournament .table .table-text {
   font-weight: 500;
   font-size: 18px;
 }
 
-.content .content-body .match .match-tournament .table .table-text .gm-green {
+.content .content-body .matchs .match-tournament .table .table-text .gm-green {
   color: #16BF2A;
 }
 
-.content .content-body .match .match-tournament .table .table-text .gm-red {
+.content .content-body .matchs .match-tournament .table .table-text .gm-red {
   color: #FF0808;
 }
 
-.content .content-body .match .match-tournament .table-button {
+.content .content-body .matchs .match-tournament .table-button {
   background-color: #5600FF;
   border-radius: 0px 10px 10px 0px;
   width: 180px;
@@ -821,7 +821,7 @@
   cursor: pointer;
 }
 
-.content .content-body .match .match-tournament .table-button:hover {
+.content .content-body .matchs .match-tournament .table-button:hover {
   position: absolute;
   right: 0;
   width: 100%;
@@ -831,7 +831,7 @@
   transition: .5s ease-in-out;
 }
 
-.content .content-body .match .match-tournament-mobile {
+.content .content-body .matchs .match-tournament-mobile {
   display: none;
 }
 
@@ -1041,6 +1041,13 @@ img {
       flex-wrap: wrap;
 }
 
+.games .game-select {
+  height: 100%;
+  max-height: 240px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 .games .game {
   width: 48%;
   position: relative;
@@ -1096,6 +1103,8 @@ img {
   border-radius: 10px;
   border: 1px solid black;
   cursor: pointer;
+  width: 100%;
+  max-width: 170px;
 }
 
 .games .game .game-buttons a:hover {
@@ -1183,6 +1192,11 @@ img {
   display: block;
 }
 
+.page__item {
+  width: 100%;
+  max-width: 1000px;
+}
+
 .page__tabs__inner {
   width: 100%;
   max-width: 1000px;
@@ -1251,9 +1265,7 @@ img {
 .page__tabs__inner .page__tabs-content {
   -webkit-box-shadow: 0 0 7px 3px rgba(0, 0, 2, 0.2);
           box-shadow: 0 0 7px 3px rgba(0, 0, 2, 0.2);
-  padding-top: 20px;
-  padding-right: 15px;
-  padding-bottom: 50px;
+  padding: 20px 20px 50px 20px;
   border-radius: 0 0 10px 10px;
 }
 
@@ -1319,6 +1331,65 @@ img {
 
 .reward-container .text {
   padding: 20px;
+}
+
+div.jQBracket .team {
+  border-radius: 10px !important;
+  height: 50px;
+  font-size: 16px !important;
+  margin: 10px 0;
+}
+
+div.jQBracket .team.lose {
+  background: #6C707F !important;
+  -webkit-box-shadow: 0px 3px 7px #00000026 !important;
+          box-shadow: 0px 3px 7px #00000026 !important;
+  color: #d2d4de !important;
+  opacity: 1 !important;
+}
+
+div.jQBracket .team.lose div.score {
+  color: #d2d4de !important;
+}
+
+div.jQBracket .team.win div.score {
+  color: #fddd80 !important;
+}
+
+div.jQBracket .team.win {
+  background: #ED7F00 !important;
+  -webkit-box-shadow: 0px 3px 15px #00000084 !important;
+          box-shadow: 0px 3px 15px #00000084 !important;
+  color: #fddd80 !important;
+}
+
+div.jQBracket .team.highlight {
+  background: #ED7F00 !important;
+  color: #fddd80 !important;
+}
+
+div.jQBracket .connector.highlight,
+div.jQBracket .connector div.connector.highlight {
+  border-color: #ED7F00 !important;
+}
+
+div.jQBracket .team div.score {
+  background-color: transparent !important;
+  width: 50px !important;
+}
+
+div.jQBracket .team div.label,
+div.jQBracket .team div.score {
+  height: 100% !important;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .popup {
@@ -1489,8 +1560,7 @@ img {
 }
 
 .lk-form {
-  width: 1000px;
-  padding: 25px 15px;
+  padding: 25px 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1580,7 +1650,6 @@ a {
 
 a .lk-button {
   background-color: #5600FF;
-  margin-left: 15px;
   height: 50px;
   outline: none;
   color: #FFFFFF;
@@ -1609,6 +1678,10 @@ a .lk-button:hover {
 .tr {
   width: 100% !important;
   max-width: 1440px !important;
+}
+
+.tournament-menu {
+  margin: 0 auto;
 }
 
 .tournament-image {
@@ -1864,6 +1937,99 @@ a .lk-button:hover {
 
 .tournament-grid .loose .icon-background i {
   color: #D2D4DE;
+}
+
+.tournament-gamers .match-tournament {
+  margin: 0 auto;
+  width: 985px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 100px;
+  margin-top: 40px;
+  margin-bottom: 40px;
+  position: relative;
+}
+
+.tournament-gamers .match-tournament img {
+  width: 100%;
+  max-width: 178px;
+  height: 100px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 10px 0 0 10px;
+}
+
+.tournament-gamers .match-tournament .table {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  height: 100%;
+  border: 1px solid #f2f7fb;
+  width: 17%;
+}
+
+.tournament-gamers .match-tournament .table .table-title {
+  color: #272c31;
+  font-weight: 600;
+  font-size: 20px;
+  border-bottom: 2px solid #5600ff;
+  text-align: center;
+  padding-top: 10px;
+  margin: 0 20px 10px 20px;
+}
+
+.tournament-gamers .match-tournament .table .table-text {
+  font-weight: 500;
+  font-size: 18px;
+}
+
+.tournament-gamers .match-tournament .table .table-text .gm-green {
+  color: #16BF2A;
+}
+
+.tournament-gamers .match-tournament .table .table-text .gm-red {
+  color: #FF0808;
+}
+
+.tournament-gamers .match-tournament .table-button {
+  background-color: #5600FF;
+  border-radius: 0px 10px 10px 0px;
+  width: 180px;
+  height: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #fff;
+  font-size: 22px;
+  cursor: pointer;
+}
+
+.tournament-gamers .match-tournament .table-button:hover {
+  background-color: #f49d00;
+  -webkit-transition: .2s ease-in-out;
+  -o-transition: .2s ease-in-out;
+  transition: .2s ease-in-out;
 }
 
 .news {
@@ -2266,8 +2432,6 @@ a .lk-button:hover {
 }
 
 .page__tabs-content__item .match-tournament {
-  width: 985px;
-  padding-left: 15px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -3116,175 +3280,6 @@ a .lk-button:hover {
   margin-top: 0;
 }
 
-@media screen and (min-width: 480px) {
-  .round-table {
-    display: -ms-flexbox;
-    display: -webkit-box;
-    display: flex;
-    -ms-flex-align: center;
-    -webkit-box-align: center;
-            align-items: center;
-    padding: 0;
-  }
-
-  .round {
-    display: -ms-flexbox;
-    display: -webkit-box;
-    display: flex;
-    -ms-flex-direction: row-reverse;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: reverse;
-            flex-direction: row-reverse;
-    -ms-flex-align: center;
-    -webkit-box-align: center;
-            align-items: center;
-    position: relative;
-    -ms-flex: 4 0 auto;
-    -webkit-box-flex: 4;
-            flex: 4 0 auto;
-    -ms-flex-order: 3;
-    -webkit-box-ordinal-group: 4;
-            order: 3;
-  }
-
-  .round-table ul {
-    margin: 0;
-    padding: 0;
-    -ms-flex-direction: column;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-            flex-direction: column;
-    list-style: none;
-    -ms-flex: 8 0 auto;
-    -webkit-box-flex: 8;
-            flex: 8 0 auto;
-    -ms-flex-order: 4;
-    -webkit-box-ordinal-group: 5;
-            order: 4;
-  }
-
-  .round::before {
-    content: '';
-    display: inline-block;
-    width: 10px;
-    border-top: 1px solid;
-    -ms-flex-order: 2;
-    -webkit-box-ordinal-group: 3;
-            order: 2;
-    -ms-flex: 1 0 auto;
-    -webkit-box-flex: 1;
-            flex: 1 0 auto;
-  }
-
-  .round::after {
-    content: '';
-    display: inline-block;
-    width: 10px;
-    -webkit-align-self: stretch;
-    -ms-flex-item-align: stretch;
-    align-self: stretch;
-    -ms-flex-order: 3;
-    -webkit-box-ordinal-group: 4;
-            order: 3;
-    -ms-flex: 1 0 auto;
-    -webkit-box-flex: 1;
-            flex: 1 0 auto;
-    background-image: -webkit-gradient(linear, left top, left bottom, from(#000), to(#000)), -webkit-gradient(linear, left top, left bottom, from(#000), to(#000)), -webkit-gradient(linear, left top, left bottom, from(#000), to(#000));
-    background-image: -o-linear-gradient(#000, #000), -o-linear-gradient(#000, #000), -o-linear-gradient(#000, #000);
-    background-image: linear-gradient(#000, #000), linear-gradient(#000, #000), linear-gradient(#000, #000);
-    background-size: 100% 1px, 100% 1px, 1px 50%;
-    background-position: 0 25%, 0 75%, 100% 50%;
-    background-repeat: no-repeat;
-  }
-
-  .round-table p {
-    border: 1px solid;
-    margin: .5em 0;
-    padding: 1em;
-    background: #eee;
-    -ms-flex: 3 0 auto;
-    -webkit-box-flex: 3;
-            flex: 3 0 auto;
-    -ms-flex-order: 1;
-    -webkit-box-ordinal-group: 2;
-            order: 1;
-  }
-}
-
-@media screen and (min-width: 800px) {
-  .round-table {
-    -ms-flex-direction: column;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-            flex-direction: column;
-  }
-
-  .round-table > ul {
-    display: -ms-flexbox;
-    display: -webkit-box;
-    display: flex;
-    -ms-flex-direction: row;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-            flex-direction: row;
-    -webkit-align-self: stretch;
-    -ms-flex-item-align: stretch;
-    align-self: stretch;
-    background: -webkit-gradient(linear, left top, left bottom, from(#000), to(#000)) 50% 0 no-repeat;
-    background: -o-linear-gradient(#000, #000) 50% 0 no-repeat;
-    background: linear-gradient(#000, #000) 50% 0 no-repeat;
-    background-size: 1px 50%;
-  }
-
-  .round-table > ul > .round:first-child {
-    -ms-flex-order: 1;
-    -webkit-box-ordinal-group: 2;
-            order: 1;
-  }
-
-  .round-table > ul > .round:last-child,
-  .round-table > ul > .round:last-child li {
-    -ms-flex-direction: row;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-            flex-direction: row;
-    -ms-flex-order: 3;
-    -webkit-box-ordinal-group: 4;
-            order: 3;
-  }
-
-  .round-table > ul > .round:last-child::after,
-  .round-table > ul > .round:last-child .round::after {
-    background-position: 0 25%, 0 75%, 0% 50%;
-  }
-
-  .round-table::before,
-  .round-table::after {
-    content: none;
-  }
-
-  .round-table > ul::after {
-    content: '';
-    display: inline-block;
-    width: 30px;
-    border-top: 1px solid;
-    background: blue;
-    -ms-flex-order: 1;
-    -webkit-box-ordinal-group: 2;
-            order: 1;
-    -ms-flex: 1 0 auto;
-    -webkit-box-flex: 1;
-            flex: 1 0 auto;
-    -webkit-align-self: center;
-    -ms-flex-item-align: center;
-    align-self: center;
-  }
-
-  .round-table > p {
-    margin-bottom: 0;
-  }
-}
-
 @media (max-width: 1366px) {
   .gallery-thumbs {
     display: none;
@@ -3542,12 +3537,12 @@ a .lk-button:hover {
     max-width: 175px;
   }
 
-  .content .content-body .match .match-title {
+  .content .content-body .matchs .match-title {
     width: 100%;
     font-size: 25px;
   }
 
-  .content .content-body .match .match-tournament .table .table-title {
+  .content .content-body .matchs .match-tournament .table .table-title {
     border-bottom: 1px solid #5600ff;
   }
 
@@ -3604,21 +3599,6 @@ a .lk-button:hover {
 
   .active .panel .info a .button {
     width: 100%;
-  }
-}
-
-@media screen and (max-width: 479px) {
-  .round-table li {
-    margin-left: -20px;
-  }
-
-  .round-table {
-    margin-left: 80px;
-  }
-
-  ul {
-    list-style: none;
-    padding: 0;
   }
 }
 
