--- a/web/css/custom.css
+++ b/web/css/custom.css
@@ -33,3 +33,34 @@ a .lk-button {
 .match-container {
     width: 100%;
 }
+
+.photo-button {
+    width: 100%;
+    outline: none;
+    background-color: #5600ff;
+    height: 50px;
+    outline: 0;
+    color: #fff;
+    font-size: 20px;
+    border-radius: 10px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    border: none;
+    cursor: pointer;
+}
+
+.control-label {
+    text-align: left;
+    width: 100%;
+}
+
+.content .aside .rating .rating-list .icon-background{
+    overflow: hidden;
+}
