--- a/web/site/css/style.css
+++ b/web/site/css/style.css
@@ -1275,7 +1275,6 @@ img {
 
 .page__tabs__inner .page__tabs-content .page__tabs-content__item .page__item {
   padding-bottom: 0;
-  padding-left: 20px;
   font-size: 20px;
   font-weight: 400;
   text-align: justify;
@@ -1760,23 +1759,14 @@ a .lk-button:hover {
 }
 
 .tournament-container .tournament-buttons {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   margin-top: 60px;
 }
 
 .tournament-container .tournament-buttons .button {
   border: 1px solid #707070;
   border-radius: 10px;
-  width: 450px;
-  height: 100px;
+  width: 100%;
+  height: 80px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1784,7 +1774,7 @@ a .lk-button:hover {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  font-size: 30px;
+  font-size: 26px;
   font-weight: 600;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
@@ -1832,6 +1822,13 @@ a .lk-button:hover {
   text-decoration: none;
 }
 
+.tournament-container .reg-container .button-registration:hover {
+  background-color: #f49d00;
+  -webkit-transition: .2s ease-in-out;
+  -o-transition: .2s ease-in-out;
+  transition: .2s ease-in-out;
+}
+
 .tournament-grid {
   margin-top: 60px;
   display: -webkit-box;
@@ -1843,14 +1840,7 @@ a .lk-button:hover {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-}
-
-.tournament-grid .dropdownlist {
-  margin-right: 70px;
-}
-
-.tournament-grid .dropdownlist .list-first {
-  margin-bottom: 185px;
+  overflow: scroll;
 }
 
 .tournament-grid .rating-list {
@@ -1941,16 +1931,17 @@ a .lk-button:hover {
 
 .tournament-gamers .match-tournament {
   margin: 0 auto;
-  width: 985px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  width: 100%;
+  max-width: 985px;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   height: 100px;
   margin-top: 40px;
   margin-bottom: 40px;
@@ -2145,10 +2136,9 @@ a .lk-button:hover {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  padding-right: 20px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   width: 100% !important;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
@@ -2162,7 +2152,6 @@ a .lk-button:hover {
 
 .top100 .game-container {
   width: 100%;
-  margin-right: 20px;
   max-width: 500px;
   margin-bottom: 30px;
 }
@@ -2355,6 +2344,7 @@ a .lk-button:hover {
 
 .lk-content .lk-aside {
   max-width: 360px;
+  margin-right: 15px;
 }
 
 .lk-content .lk-aside .lk-info {
@@ -2538,8 +2528,6 @@ a .lk-button:hover {
   background-color: #F2F7FB;
   border: 1px solid #000000;
   border-radius: 10px;
-  width: 970px;
-  margin-left: 15px;
   height: 80px;
   margin-bottom: 20px;
   cursor: pointer;
@@ -2581,7 +2569,6 @@ a .lk-button:hover {
 
 .archive-game-rating .game-container {
   margin-bottom: 40px;
-  margin-left: 15px;
   cursor: pointer;
   position: relative;
 }
@@ -2807,7 +2794,6 @@ a .lk-button:hover {
 }
 
 .lk-history-content .match-tournament {
-  width: 985px;
   padding-left: 15px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -2882,7 +2868,6 @@ a .lk-button:hover {
 }
 
 .lk-matches-content .match-tournament {
-  width: 985px;
   padding-left: 15px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -3178,7 +3163,8 @@ a .lk-button:hover {
 .faiting .faiting-container .faiter .faiter-buttons .buttons .won {
   background: #329F3F;
   border-radius: 10px;
-  width: 129px;
+  width: 100%;
+  max-width: 129px;
   height: 49px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -3213,7 +3199,8 @@ a .lk-button:hover {
 .faiting .faiting-container .faiter .faiter-buttons .buttons .draw {
   background: #5600FF;
   border-radius: 10px;
-  width: 297px;
+  width: 100%;
+  max-width: 297px;
   height: 49px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -3240,6 +3227,25 @@ a .lk-button:hover {
   color: #b91906;
   font-weight: 900;
   font-size: 130px;
+}
+
+.get-nicer {
+  overflow: auto;
+  height: 280px;
+}
+
+.nicescroll-rails {
+  background-color: #337ab7;
+}
+
+.nicescroll-cursors {
+  border: none !important;
+  background-color: #000 !important;
+  border-radius: 0 !important;
+}
+
+.jumbotron {
+  padding-top: 80px;
 }
 
 .faiting {
@@ -3302,13 +3308,31 @@ a .lk-button:hover {
   }
 
   .content .content-body {
-    max-width: 820px;
+    max-width: 1000px;
+  }
+
+  .top100 .game-container {
+    max-width: 485px;
+  }
+
+  .top100 .active {
+    max-width: 100%;
   }
 }
 
 @media (max-width: 1365px) {
   .table-text i {
     display: none;
+  }
+}
+
+@media (max-width: 1200px) {
+  .content .content-body {
+    max-width: 820px;
+  }
+
+  .top100 .game-container {
+    max-width: 400px;
   }
 }
 
@@ -3461,6 +3485,48 @@ a .lk-button:hover {
     margin-left: 0 !important;
     margin-right: 0 !important;
   }
+
+  .top100 .game-container {
+    max-width: 485px;
+  }
+}
+
+@media (max-width: 1024px) {
+  .top100 .game-container {
+    max-width: 100%;
+  }
+
+  .faiting .faiting-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+@media (max-width: 992px) {
+  .lk-content {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    margin-top: 30px;
+  }
+
+  .lk-content .lk-aside {
+    margin: 0 auto;
+    padding-top: 40px;
+  }
+
+  .lk-content .page__item .page__tabs {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
 
 @media (max-width: 969px) {
@@ -3525,6 +3591,45 @@ a .lk-button:hover {
     height: 60px;
     font-size: 20px;
   }
+
+  .tournament-image .tournament-text {
+    -webkit-backdrop-filter: blur(0);
+            backdrop-filter: blur(0);
+    font-size: 40px;
+  }
+
+  .lk-nav ul {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+
+  .lk-nav ul li {
+    padding-bottom: 15px;
+  }
+}
+
+@media (max-width: 700px) {
+  .tournament-table div {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
+  .tournament-table div p {
+    border-right: none;
+    border-bottom: 1px solid #5600FF;
+    width: 100%;
+  }
+
+  .tournament-table div p:last-child {
+    border-bottom: 1px solid #5600FF;
+  }
 }
 
 @media (max-width: 500px) {
@@ -3557,6 +3662,25 @@ a .lk-button:hover {
 
   .slide-text .subtitle {
     display: none;
+  }
+
+  .reward-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    padding-top: 15px;
+  }
+
+  .reward-container .name {
+    padding-top: 20px;
+    text-align: center;
   }
 
   .popup .popup__body .popup__content .info-block .info {
@@ -3600,6 +3724,11 @@ a .lk-button:hover {
   .active .panel .info a .button {
     width: 100%;
   }
+
+  .archive-kudo-list div {
+    text-align: center;
+    padding: 0 !important;
+  }
 }
 
 @media (max-width: 425px) {
@@ -3632,6 +3761,7 @@ a .lk-button:hover {
   .game-buttons .game-button {
     margin-bottom: 20px;
     text-align: center;
+    max-width: 100% !important;
   }
 }
 
