--- a/web/admin/assets/css/custom.css
+++ b/web/admin/assets/css/custom.css
@@ -5,3 +5,11 @@
 .text-center {
     background-color: #323B45;
 }
+
+.input-group-addon  {
+     padding: 10px;
+     display: flex;
+     justify-content: space-between;
+     align-items: center;
+     width: 30px;
+ }
