--- a/web/css/custom.css
+++ b/web/css/custom.css
@@ -76,3 +76,42 @@ a .lk-button {
 .open {
     z-index: 100;
 }
+
+.further-information {
+    text-align: center;
+    padding-top: 200px;
+    padding-bottom: 200px;
+}
+
+.further-information h1{
+    padding-bottom: 30px;
+}
+
+.further-information p{
+    padding-bottom: 15px;
+}
+
+.further-information input{
+    background: #fff;
+    border: 2px solid #ededed;
+    border-radius: 7px;
+    width: 100%;
+    max-width: 300px;
+    height: 50px;
+    padding: 10px;
+    margin-bottom: 20px;
+    font-size: 20px;
+    outline: 0;
+}
+
+.ftr-info {
+    background-color: #5600ff;
+    height: 50px;
+    width: 300px;
+    outline: 0;
+    color: #fff;
+    font-size: 20px;
+    border-radius: 10px;
+    border: none;
+    cursor: pointer;
+}
