--- a/web/css/custom.css
+++ b/web/css/custom.css
@@ -116,6 +116,48 @@ a .lk-button {
     cursor: pointer;
 }
 
-.chat-iframe{
+.mesgs {
+    padding: 15px 15px 0 15px;
+}
+
+.msg_history {
+    height: 560px !important;
+}
+
+#p0,
+.chat-iframe {
     width: 100%;
+    height: 560px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+
+.help-block {
+    display: none;
+}
+
+.received_withd_msg h1 {
+    font-size: 15px;
+    color: #464646;
+    margin: 15px 0 10px 0;
+
+}
+
+.list-view {
+    height: 570px;
+    overflow: VISIBLE;
+    display: flex;
+    flex-direction: column;
+    JUSTIFY-CONTENT: flex-end;
+}
+
+.tournament-container .active .button .panel {
+    width: 100%;
+}
+
+#list-scroll {
+    overflow-y: scroll;
+    height: 475px;
+    justify-content: end;
 }
